ensure that text cannot overflow out of chat message contents fixes #97

--- a/assets/styles/chat.less
+++ b/assets/styles/chat.less
@@ -54,6 +54,7 @@
 			div.content {
 				.wrap-break;
 				.shadow-level-1;
+				overflow: auto;
 				padding: 13px 17px;
 				background: @card-background-color;
 
